sync: update from monorepo (3bc0c321)